@@ -1,5 +1,6 @@
 Version 1.1.0-CVS (?? ??? 2005)
   - Fixed the following bug reports on SourceForge:
+      1418725: Change of User Template changes System Template instead
       1418717: user-app-*.php does not show public access calendar (w soln)
       1419183: Wrong login links with user-app-joomla.php
       1420458: Percentage completion of tasks: one is set to all
